--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: "1.19"
       
       - name: Build
-        run: go build -v ./cmd/app
+        run: go build -ldflags="-s -w" ./cmd/app
         
       - name: Upload
         uses: actions/upload-artifact@v3
